# mcp_polyhedral

./: Cargo.toml  Dockerfile  README.md
src/: main.rs
testing_mcp/: mcp_client.py  requirements.txt  test_all.py  test_claude.py  test_codex.py  test_gemini.py  test_mcp_direct.py
